5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1601_1802.log
== TEST (2019-03-27 18:42:16) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dono = [5**0.5*b + math.pi**c/3]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = [5**0.5*b + math.pi**c/3]
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:43:01) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dono = (5**0.5*b + math.pi**c/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = (5**0.5*b + math.pi**c/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:46:25) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dono = (5**0.5*8 + (math.pi)**4/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = (5**0.5*8 + (math.pi)**4/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:50:25) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dono = sqrt(5**0.5*b) + (math.pi)**c/3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = sqrt(5**0.5*b) + (math.pi)**c/3
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:51:00) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dono = sqrt(5**0.5*b) + (math.pi)**c/3
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:12) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dano = [5**0.5*b**0.5 + math.pi**c/3]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = [5**0.5*b**0.5 + math.pi**c/3]
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:55:31) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dano = int(5**0.5*b**0.5 + math.pi**c/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = int(5**0.5*b**0.5 + math.pi**c/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:55:56) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dano = (5**0.5*b**0.5 + math.pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = (5**0.5*b**0.5 + math.pi)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:58:49) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dano = ((5**0.5) * (b)**0.5) + math.pi
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = ((5**0.5) * (b)**0.5) + math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:01:26) 
-- CODE:
a = int(input("pontos de vidas iniciais:"))
b = int(input("valo D1:"))
C = int(input("valor D2:"))
from math import*
dano = sqrt(5*b) + (math.pi)**c/3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = sqrt(5*b) + (math.pi)**c/3
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
